--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "6.9.0",
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "zod": "^3.25.56"
   },
   "devDependencies": {
