--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "@prisma/client": "6.9.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.25.56"
   },
   "devDependencies": {
