--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
-    "@prisma/client": "6.9.0",
-    "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
@@ -25,6 +24,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.30",
+    "@prisma/client": "6.9.0",
+    "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.9",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "prisma": "6.9.0",
