--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
@@ -21,12 +22,13 @@
     "zod": "^3.25.56"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.2",
-    "@types/node": "^22.15.30",
     "@prisma/client": "6.9.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.15.30",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "prisma": "6.9.0",
