--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc --build",
     "start": "node ./dist/server.js",
-    "dev": "nodemon ./src/server.ts"
+    "dev": "nodemon ./src/server.ts",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
