fix(): start first migrate

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc --build",
-    "start": "node ./dist/server.js && prisma migrate deploy",
+    "start": "prisma migrate deploy && node ./dist/server.js",
     "dev": "nodemon ./src/server.ts",
     "postinstall": "prisma generate"
   },
